packages/win32/src/user32.g.h

MYLIB_EXPORT Win32Result ActivateKeyboardLayout_Wrapper(HKL hkl, DWORD flags);
MYLIB_EXPORT Win32Result AddClipboardFormatListener_Wrapper(HWND hwnd);
MYLIB_EXPORT Win32Result AdjustWindowRect_Wrapper(RECT* lpRect, DWORD dwStyle, BOOL bMenu);
MYLIB_EXPORT Win32Result AdjustWindowRectEx_Wrapper(RECT* lpRect, DWORD dwStyle, BOOL bMenu, DWORD dwExStyle);
MYLIB_EXPORT Win32Result AdjustWindowRectExForDpi_Wrapper(RECT* lpRect, DWORD dwStyle, BOOL bMenu, DWORD dwExStyle, unsigned long dpi);
MYLIB_EXPORT Win32Result AllowSetForegroundWindow_Wrapper(unsigned long dwProcessId);
MYLIB_EXPORT Win32Result AnimateWindow_Wrapper(HWND hWnd, unsigned long dwTime, DWORD dwFlags);
MYLIB_EXPORT Win32Result AppendMenuW_Wrapper(HMENU hMenu, DWORD uFlags, unsigned long long uIDNewItem, PCWSTR lpNewItem);
MYLIB_EXPORT Win32Result ArrangeIconicWindows_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result BeginDeferWindowPos_Wrapper(int nNumWindows);
MYLIB_EXPORT Win32Result BlockInput_Wrapper(BOOL fBlockIt);
MYLIB_EXPORT Win32Result BringWindowToTop_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result BroadcastSystemMessageW_Wrapper(DWORD flags, DWORD* lpInfo, unsigned long msg, WPARAM wParam, LPARAM lParam);
MYLIB_EXPORT Win32Result BroadcastSystemMessageExW_Wrapper(DWORD flags, DWORD* lpInfo, unsigned long msg, WPARAM wParam, LPARAM lParam, BSMINFO* pbsmInfo);
MYLIB_EXPORT Win32Result CalculatePopupWindowPosition_Wrapper(POINT* anchorPoint, SIZE* windowSize, unsigned long flags, RECT* excludeRect, RECT* popupWindowPosition);
MYLIB_EXPORT Win32Result CascadeWindows_Wrapper(HWND hwndParent, DWORD wHow, RECT* lpRect, unsigned long cKids, HWND* lpKids);
MYLIB_EXPORT Win32Result ChangeWindowMessageFilter_Wrapper(unsigned long message, DWORD dwFlag);
MYLIB_EXPORT Win32Result ChangeWindowMessageFilterEx_Wrapper(HWND hwnd, unsigned long message, DWORD action, CHANGEFILTERSTRUCT* pChangeFilterStruct);
MYLIB_EXPORT Win32Result CheckDlgButton_Wrapper(HWND hDlg, int nIDButton, DWORD uCheck);
MYLIB_EXPORT Win32Result CheckRadioButton_Wrapper(HWND hDlg, int nIDFirstButton, int nIDLastButton, int nIDCheckButton);
MYLIB_EXPORT Win32Result ClipCursor_Wrapper(RECT* lpRect);
MYLIB_EXPORT Win32Result CloseClipboard_Wrapper();
MYLIB_EXPORT Win32Result CloseGestureInfoHandle_Wrapper(HGESTUREINFO hGestureInfo);
MYLIB_EXPORT Win32Result CloseTouchInputHandle_Wrapper(HTOUCHINPUT hTouchInput);
MYLIB_EXPORT Win32Result CloseWindow_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result CopyIcon_Wrapper(HICON hIcon);
MYLIB_EXPORT Win32Result CopyImage_Wrapper(HANDLE h, DWORD type, int cx, int cy, DWORD flags);
MYLIB_EXPORT Win32Result CountClipboardFormats_Wrapper();
MYLIB_EXPORT Win32Result CreateAcceleratorTableW_Wrapper(ACCEL* paccel, int cAccel);
MYLIB_EXPORT Win32Result CreateCaret_Wrapper(HWND hWnd, HBITMAP hBitmap, int nWidth, int nHeight);
MYLIB_EXPORT Win32Result CreateCursor_Wrapper(HINSTANCE hInst, int xHotSpot, int yHotSpot, int nWidth, int nHeight, void* pvANDPlane, void* pvXORPlane);
MYLIB_EXPORT Win32Result CreateDesktopW_Wrapper(PCWSTR lpszDesktop, PCWSTR lpszDevice, DEVMODEW* pDevmode, DWORD dwFlags, unsigned long dwDesiredAccess, SECURITY_ATTRIBUTES* lpsa);
MYLIB_EXPORT Win32Result CreateDesktopExW_Wrapper(PCWSTR lpszDesktop, PCWSTR lpszDevice, DEVMODEW* pDevmode, DWORD dwFlags, unsigned long dwDesiredAccess, SECURITY_ATTRIBUTES* lpsa, unsigned long ulHeapSize, void* pvoid);
MYLIB_EXPORT Win32Result CreateDialogIndirectParamW_Wrapper(HINSTANCE hInstance, DLGTEMPLATE* lpTemplate, HWND hWndParent, DLGPROC lpDialogFunc, LPARAM dwInitParam);
MYLIB_EXPORT Win32Result CreateIcon_Wrapper(HINSTANCE hInstance, int nWidth, int nHeight, unsigned char cPlanes, unsigned char cBitsPixel, unsigned char* lpbANDbits, unsigned char* lpbXORbits);
MYLIB_EXPORT Win32Result CreateIconFromResource_Wrapper(unsigned char* presbits, unsigned long dwResSize, BOOL fIcon, unsigned long dwVer);
MYLIB_EXPORT Win32Result CreateIconFromResourceEx_Wrapper(unsigned char* presbits, unsigned long dwResSize, BOOL fIcon, unsigned long dwVer, int cxDesired, int cyDesired, DWORD flags);
MYLIB_EXPORT Win32Result CreateIconIndirect_Wrapper(ICONINFO* piconinfo);
MYLIB_EXPORT Win32Result CreateMDIWindowW_Wrapper(PCWSTR lpClassName, PCWSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HINSTANCE hInstance, LPARAM lParam);
MYLIB_EXPORT Win32Result CreateMenu_Wrapper();
MYLIB_EXPORT Win32Result CreatePopupMenu_Wrapper();
MYLIB_EXPORT Win32Result CreateWindowExW_Wrapper(DWORD dwExStyle, PCWSTR lpClassName, PCWSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, void* lpParam);
MYLIB_EXPORT Win32Result CreateWindowStationW_Wrapper(PCWSTR lpwinsta, unsigned long dwFlags, unsigned long dwDesiredAccess, SECURITY_ATTRIBUTES* lpsa);
MYLIB_EXPORT Win32Result DeferWindowPos_Wrapper(HDWP hWinPosInfo, HWND hWnd, HWND hWndInsertAfter, int x, int y, int cx, int cy, DWORD uFlags);
MYLIB_EXPORT Win32Result DeleteMenu_Wrapper(HMENU hMenu, unsigned long uPosition, DWORD uFlags);
MYLIB_EXPORT Win32Result DestroyCaret_Wrapper();
MYLIB_EXPORT Win32Result DestroyCursor_Wrapper(HCURSOR hCursor);
MYLIB_EXPORT Win32Result DestroyIcon_Wrapper(HICON hIcon);
MYLIB_EXPORT Win32Result DestroyMenu_Wrapper(HMENU hMenu);
MYLIB_EXPORT Win32Result DestroyWindow_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result DialogBoxIndirectParamW_Wrapper(HINSTANCE hInstance, DLGTEMPLATE* hDialogTemplate, HWND hWndParent, DLGPROC lpDialogFunc, LPARAM dwInitParam);
MYLIB_EXPORT Win32Result DrawIcon_Wrapper(HDC hDC, int x, int y, HICON hIcon);
MYLIB_EXPORT Win32Result EmptyClipboard_Wrapper();
MYLIB_EXPORT Win32Result EnableMouseInPointer_Wrapper(BOOL fEnable);
MYLIB_EXPORT Win32Result EnableNonClientDpiScaling_Wrapper(HWND hwnd);
MYLIB_EXPORT Win32Result EnableScrollBar_Wrapper(HWND hWnd, unsigned long wSBflags, DWORD wArrows);
MYLIB_EXPORT Win32Result EndDeferWindowPos_Wrapper(HDWP hWinPosInfo);