packages/win32/lib/src/_internal/user32.g.dart

// THIS FILE IS GENERATED AUTOMATICALLY AND SHOULD NOT BE EDITED DIRECTLY.
//
// Wrappers for Win32 API functions that wrap the native APIs and preserve the
// result of GetLastError(), making it easier to debug issues and handle errors
// reliably.
//
// ignore_for_file: non_constant_identifier_names, unused_import

@DefaultAsset('package:win32/win32.dart')
library;

import 'dart:ffi';

import 'package:meta/meta.dart';

import '../callbacks.g.dart';
import '../functions.dart';
import '../guid.dart';
import '../pcstr.dart';
import '../pcwstr.dart';
import '../structs.g.dart';
import '../types.dart';
import 'win32.dart' show NativeWin32Result;

@internal
@Native<NativeWin32Result Function(HKL, Uint32)>()
external NativeWin32Result ActivateKeyboardLayout_Wrapper(int hkl, int flags);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result AddClipboardFormatListener_Wrapper(int hwnd);

@internal
@Native<NativeWin32Result Function(Pointer<RECT>, Uint32, BOOL)>()
external NativeWin32Result AdjustWindowRect_Wrapper(
  Pointer<RECT> lpRect,
  int dwStyle,
  int bMenu,
);

@internal
@Native<NativeWin32Result Function(Pointer<RECT>, Uint32, BOOL, Uint32)>()
external NativeWin32Result AdjustWindowRectEx_Wrapper(
  Pointer<RECT> lpRect,
  int dwStyle,
  int bMenu,
  int dwExStyle,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<RECT>, Uint32, BOOL, Uint32, Uint32)
>()
external NativeWin32Result AdjustWindowRectExForDpi_Wrapper(
  Pointer<RECT> lpRect,
  int dwStyle,
  int bMenu,
  int dwExStyle,
  int dpi,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result AllowSetForegroundWindow_Wrapper(int dwProcessId);

@internal
@Native<NativeWin32Result Function(HWND, Uint32, Uint32)>()
external NativeWin32Result AnimateWindow_Wrapper(
  int hWnd,
  int dwTime,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, IntPtr, PCWSTR)>()
external NativeWin32Result AppendMenuW_Wrapper(
  int hMenu,
  int uFlags,
  int uIDNewItem,
  PCWSTR lpNewItem,
);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result ArrangeIconicWindows_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(Int32)>()
external NativeWin32Result BeginDeferWindowPos_Wrapper(int nNumWindows);

@internal
@Native<NativeWin32Result Function(BOOL)>()
external NativeWin32Result BlockInput_Wrapper(int fBlockIt);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result BringWindowToTop_Wrapper(int hWnd);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<Uint32>, Uint32, WPARAM, LPARAM)
>()
external NativeWin32Result BroadcastSystemMessageW_Wrapper(
  int flags,
  Pointer<Uint32> lpInfo,
  int msg,
  int wParam,
  int lParam,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<Uint32>,
    Uint32,
    WPARAM,
    LPARAM,
    Pointer<BSMINFO>,
  )
>()
external NativeWin32Result BroadcastSystemMessageExW_Wrapper(
  int flags,
  Pointer<Uint32> lpInfo,
  int msg,
  int wParam,
  int lParam,
  Pointer<BSMINFO> pbsmInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<POINT>,
    Pointer<SIZE>,
    Uint32,
    Pointer<RECT>,
    Pointer<RECT>,
  )
>()
external NativeWin32Result CalculatePopupWindowPosition_Wrapper(
  Pointer<POINT> anchorPoint,
  Pointer<SIZE> windowSize,
  int flags,
  Pointer<RECT> excludeRect,
  Pointer<RECT> popupWindowPosition,
);

@internal
@Native<
  NativeWin32Result Function(HWND, Uint32, Pointer<RECT>, Uint32, Pointer<HWND>)
>()
external NativeWin32Result CascadeWindows_Wrapper(
  int hwndParent,
  int wHow,
  Pointer<RECT> lpRect,
  int cKids,
  Pointer<HWND> lpKids,
);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32)>()
external NativeWin32Result ChangeWindowMessageFilter_Wrapper(
  int message,
  int dwFlag,
);

@internal
@Native<
  NativeWin32Result Function(HWND, Uint32, Uint32, Pointer<CHANGEFILTERSTRUCT>)
>()
external NativeWin32Result ChangeWindowMessageFilterEx_Wrapper(
  int hwnd,
  int message,
  int action,
  Pointer<CHANGEFILTERSTRUCT> pChangeFilterStruct,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Uint32)>()
external NativeWin32Result CheckDlgButton_Wrapper(
  int hDlg,
  int nIDButton,
  int uCheck,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Int32, Int32)>()
external NativeWin32Result CheckRadioButton_Wrapper(
  int hDlg,
  int nIDFirstButton,
  int nIDLastButton,
  int nIDCheckButton,
);

@internal
@Native<NativeWin32Result Function(Pointer<RECT>)>()
external NativeWin32Result ClipCursor_Wrapper(Pointer<RECT> lpRect);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result CloseClipboard_Wrapper();

@internal
@Native<NativeWin32Result Function(HGESTUREINFO)>()
external NativeWin32Result CloseGestureInfoHandle_Wrapper(int hGestureInfo);

@internal
@Native<NativeWin32Result Function(HTOUCHINPUT)>()
external NativeWin32Result CloseTouchInputHandle_Wrapper(int hTouchInput);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result CloseWindow_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(HICON)>()
external NativeWin32Result CopyIcon_Wrapper(int hIcon);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Int32, Int32, Uint32)>()
external NativeWin32Result CopyImage_Wrapper(
  int h,
  int type,
  int cx,
  int cy,
  int flags,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result CountClipboardFormats_Wrapper();

@internal
@Native<NativeWin32Result Function(Pointer<ACCEL>, Int32)>()
external NativeWin32Result CreateAcceleratorTableW_Wrapper(
  Pointer<ACCEL> paccel,
  int cAccel,
);

@internal
@Native<NativeWin32Result Function(HWND, HBITMAP, Int32, Int32)>()
external NativeWin32Result CreateCaret_Wrapper(
  int hWnd,
  int hBitmap,
  int nWidth,
  int nHeight,
);

@internal
@Native<
  NativeWin32Result Function(
    HINSTANCE,
    Int32,
    Int32,
    Int32,
    Int32,
    Pointer,
    Pointer,
  )
>()
external NativeWin32Result CreateCursor_Wrapper(
  int hInst,
  int xHotSpot,
  int yHotSpot,
  int nWidth,
  int nHeight,
  Pointer pvANDPlane,
  Pointer pvXORPlane,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    PCWSTR,
    Pointer<DEVMODE>,
    Uint32,
    Uint32,
    Pointer<SECURITY_ATTRIBUTES>,
  )
>()
external NativeWin32Result CreateDesktopW_Wrapper(
  PCWSTR lpszDesktop,
  PCWSTR lpszDevice,
  Pointer<DEVMODE> pDevmode,
  int dwFlags,
  int dwDesiredAccess,
  Pointer<SECURITY_ATTRIBUTES> lpsa,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    PCWSTR,
    Pointer<DEVMODE>,
    Uint32,
    Uint32,
    Pointer<SECURITY_ATTRIBUTES>,
    Uint32,
    Pointer,
  )
>()
external NativeWin32Result CreateDesktopExW_Wrapper(
  PCWSTR lpszDesktop,
  PCWSTR lpszDevice,
  Pointer<DEVMODE> pDevmode,
  int dwFlags,
  int dwDesiredAccess,
  Pointer<SECURITY_ATTRIBUTES> lpsa,
  int ulHeapSize,
  Pointer pvoid,
);

@internal
@Native<
  NativeWin32Result Function(
    HINSTANCE,
    Pointer<DLGTEMPLATE>,
    HWND,
    Pointer<NativeFunction<DLGPROC>>,
    LPARAM,
  )
>()
external NativeWin32Result CreateDialogIndirectParamW_Wrapper(
  int hInstance,
  Pointer<DLGTEMPLATE> lpTemplate,
  int hWndParent,
  Pointer<NativeFunction<DLGPROC>> lpDialogFunc,
  int dwInitParam,
);

@internal
@Native<
  NativeWin32Result Function(
    HINSTANCE,
    Int32,
    Int32,
    Uint8,
    Uint8,
    Pointer<Uint8>,
    Pointer<Uint8>,
  )
>()
external NativeWin32Result CreateIcon_Wrapper(
  int hInstance,
  int nWidth,
  int nHeight,
  int cPlanes,
  int cBitsPixel,
  Pointer<Uint8> lpbANDbits,
  Pointer<Uint8> lpbXORbits,
);

@internal
@Native<NativeWin32Result Function(Pointer<Uint8>, Uint32, BOOL, Uint32)>()
external NativeWin32Result CreateIconFromResource_Wrapper(
  Pointer<Uint8> presbits,
  int dwResSize,
  int fIcon,
  int dwVer,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<Uint8>,
    Uint32,
    BOOL,
    Uint32,
    Int32,
    Int32,
    Uint32,
  )
>()
external NativeWin32Result CreateIconFromResourceEx_Wrapper(
  Pointer<Uint8> presbits,
  int dwResSize,
  int fIcon,
  int dwVer,
  int cxDesired,
  int cyDesired,
  int flags,
);

@internal
@Native<NativeWin32Result Function(Pointer<ICONINFO>)>()
external NativeWin32Result CreateIconIndirect_Wrapper(
  Pointer<ICONINFO> piconinfo,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    PCWSTR,
    Uint32,
    Int32,
    Int32,
    Int32,
    Int32,
    HWND,
    HINSTANCE,
    LPARAM,
  )
>()
external NativeWin32Result CreateMDIWindowW_Wrapper(
  PCWSTR lpClassName,
  PCWSTR lpWindowName,
  int dwStyle,
  int x,
  int y,
  int nWidth,
  int nHeight,
  int hWndParent,
  int hInstance,
  int lParam,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result CreateMenu_Wrapper();

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result CreatePopupMenu_Wrapper();

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    PCWSTR,
    PCWSTR,
    Uint32,
    Int32,
    Int32,
    Int32,
    Int32,
    HWND,
    HMENU,
    HINSTANCE,
    Pointer,
  )
>()
external NativeWin32Result CreateWindowExW_Wrapper(
  int dwExStyle,
  PCWSTR lpClassName,
  PCWSTR lpWindowName,
  int dwStyle,
  int x,
  int y,
  int nWidth,
  int nHeight,
  int hWndParent,
  int hMenu,
  int hInstance,
  Pointer lpParam,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    Uint32,
    Uint32,
    Pointer<SECURITY_ATTRIBUTES>,
  )
>()
external NativeWin32Result CreateWindowStationW_Wrapper(
  PCWSTR lpwinsta,
  int dwFlags,
  int dwDesiredAccess,
  Pointer<SECURITY_ATTRIBUTES> lpsa,
);

@internal
@Native<
  NativeWin32Result Function(
    HDWP,
    HWND,
    HWND,
    Int32,
    Int32,
    Int32,
    Int32,
    Uint32,
  )
>()
external NativeWin32Result DeferWindowPos_Wrapper(
  int hWinPosInfo,
  int hWnd,
  int hWndInsertAfter,
  int x,
  int y,
  int cx,
  int cy,
  int uFlags,
);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32)>()
external NativeWin32Result DeleteMenu_Wrapper(
  int hMenu,
  int uPosition,
  int uFlags,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result DestroyCaret_Wrapper();

@internal
@Native<NativeWin32Result Function(HCURSOR)>()
external NativeWin32Result DestroyCursor_Wrapper(int hCursor);

@internal
@Native<NativeWin32Result Function(HICON)>()
external NativeWin32Result DestroyIcon_Wrapper(int hIcon);

@internal
@Native<NativeWin32Result Function(HMENU)>()
external NativeWin32Result DestroyMenu_Wrapper(int hMenu);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result DestroyWindow_Wrapper(int hWnd);

@internal
@Native<
  NativeWin32Result Function(
    HINSTANCE,
    Pointer<DLGTEMPLATE>,
    HWND,
    Pointer<NativeFunction<DLGPROC>>,
    LPARAM,
  )
>()
external NativeWin32Result DialogBoxIndirectParamW_Wrapper(
  int hInstance,
  Pointer<DLGTEMPLATE> hDialogTemplate,
  int hWndParent,
  Pointer<NativeFunction<DLGPROC>> lpDialogFunc,
  int dwInitParam,
);

@internal
@Native<NativeWin32Result Function(HDC, Int32, Int32, HICON)>()
external NativeWin32Result DrawIcon_Wrapper(int hDC, int x, int y, int hIcon);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result EmptyClipboard_Wrapper();

@internal
@Native<NativeWin32Result Function(BOOL)>()
external NativeWin32Result EnableMouseInPointer_Wrapper(int fEnable);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result EnableNonClientDpiScaling_Wrapper(int hwnd);

@internal
@Native<NativeWin32Result Function(HWND, Uint32, Uint32)>()
external NativeWin32Result EnableScrollBar_Wrapper(
  int hWnd,
  int wSBflags,
  int wArrows,
);

@internal
@Native<NativeWin32Result Function(HDWP)>()
external NativeWin32Result EndDeferWindowPos_Wrapper(int hWinPosInfo);
